# equipment

./: .gitignore  README.md  package.json
backend/: CMakeLists.txt  stagecast-cue-backend.service  tests.cmake
backend/captions/: .gitignore  CMakeLists.txt  captioner  captioner.cc  captioner.hh  captioner.py  captions.txt  index.html  main.cc  stagecast-captioner.service  tokens.json
backend/cli/: CMakeLists.txt  main.cc
backend/dmx/: CMakeLists.txt  main.cc
backend/forwarder/: CMakeLists.txt  main.cc
backend/mixer/: CMakeLists.txt  levels.hh  main.cc  mixer.cc  mixer.hh  pufferizer.cc  pufferizer.hh  receiver.cc  receiver.hh  test.cc  wav_header.cc  wav_header.hh
backend/tests/: CMakeLists.txt  web_sample.cc
backend/web/: CMakeLists.txt  beast.hh  client.cc  client.hh  cue.cc  cue.hh  cuelist.cc  cuelist.hh  dispatcher.cc  dispatcher.hh  listener.cc  listener.hh  main.cc  manager.cc  manager.hh  net.hh  serialization.hh  transmitter.cc  transmitter.hh  web_backend.cc
backend/web/certificate/: dh1024.pem  dh512.pem  server.crt  server.csr  server.key  server.key.secure
backend/web/src/: CMakeLists.txt
camera-frontend/: .gitignore  Makefile  README.md  package-lock.json  package.json
lighting/: .gitignore  Makefile  install_service.sh  run.sh  stagecast-lighting.service.template  stop_service.sh
network/: crypto.hh
scenes/: build  install_service.sh  run.sh  stagecast-scenes.service  stagecast-scenes.service.template  stop_service.sh
viewer/: viewer.html  viewer.js
web-frontend/: gccdump.s  (+2 more)
web-frontend-sound/: package-lock.json  package.json  (+1 more)
(+83 files in other folders)
